[project]
name = "ComfyUI-Grsai"
description = "Grsai API node supports models: GPT Image 2 (¥ 0.03), Nano Banana 2(imageSize 1K/2K/4K)(¥ 0.06), Nano Banana Pro (imageSize 1K/2K/4K)(¥ 0.09), Nano Banana (imageSize 1K/2K/4K)(¥ 0.022). Support text generated images, image generated images, and multi image fusion."
version = "1.1.3"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "python-dotenv",
    "httpx",
    "httpcore"
]

[project.urls]
Repository = "https://github.com/31702160136/ComfyUI-GrsAI"

[tool.comfy]
PublisherId = "Tom"
DisplayName = "GrsAI api in ComfyUI"
Icon = "https://raw.githubusercontent.com/31702160136/ComfyUI-GrsAI/main/images/text-to-image-demo.png" 
